add withdrawing money from investment funds
